reconcile-functional-preservation-20260904-042411/postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres
  namespace: shopno-data
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - postgres.shopnoltd.dpdns.org
      secretName: postgres-tls
  rules:
    - host: postgres.shopnoltd.dpdns.org
      http:
        paths:
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: postgres
                port:
                  number: 80
